--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -17,10 +17,55 @@ services:
       # See https://xdebug.org/docs/all_settings#mode
       XDEBUG_MODE: "${XDEBUG_MODE:-off}"
       APP_ENV: "${APP_ENV:-dev}"
+      DATABASE_URL: "mysql://symfony:symfony@db:3306/transit_db?serverVersion=8.0"
     extra_hosts:
       # Ensure that host.docker.internal is correctly defined on Linux
       - host.docker.internal:host-gateway
     tty: true
+    depends_on:
+      - mailCatcher
+      - db
+      - front
+
+
+  mailCatcher:
+    image: djfarrelly/maildev
+    container_name: mailCatcher
+    ports:
+      - "8001:80"
+
+  front:
+    build:
+      context: ./front
+      dockerfile: ../docker/node/Dockerfile
+    container_name: nuxt_front
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./front:/usr/src/app
+    command: [ "npm", "run", "dev" ]
+
+  db:
+    image: mysql:8.4
+    container_name: mysql_db
+    restart: always
+    command: "--default-authentication-plugin=mysql_native_password"
+    environment:
+      MYSQL_DATABASE: transit_db
+      MYSQL_USER: symfony
+      MYSQL_PASSWORD: symfony
+      MYSQL_ROOT_USER: root
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
+
+
+
 
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
